--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "lunchly",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +12,10 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "moment": "^2.22.2",
+    "nodemon": "^3.0.2",
     "nunjucks": "^3.1.3",
     "pg": "^8.3.3"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
